force-app/main/default/objects/JK_EducationalQualification__c/JK_EducationalQualification__c.object-meta.xml
<CustomObject>
    <label>JK_EducationalQualification</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>JK_EducationalQualifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>