force-app/main/default/objects/JK_EducationalQualification__c/fields/EQ_degree__c.field-meta.xml
<CustomField>
    <fullName>EQ_degree__c</fullName>
    <label>EQ_degree</label>
    <length>100</length>
    <type>Text</type>
</CustomField>