force-app/main/default/objects/JK_EducationalQualification__c/fields/EQ_educationalLevel__c.field-meta.xml
<CustomField>
    <fullName>EQ_educationalLevel__c</fullName>
    <label>EQ_educationalLevel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>10th</fullName>
            </value>
            <value>
                <fullName>12th</fullName>
            </value>
            <value>
                <fullName>Graduation</fullName>
            </value>
            <value>
                <fullName>Post-Graduation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>