force-app/main/default/objects/JK_EducationalQualification__c/fields/EQ_percentageMarks__c.field-meta.xml
<CustomField>
    <fullName>EQ_percentageMarks__c</fullName>
    <label>EQ_percentageMarks</label>
    <length>100</length>
    <type>Text</type>
</CustomField>