force-app/main/default/objects/JK_EducationalQualification__c/fields/EQ_specialisation__c.field-meta.xml
<CustomField>
    <fullName>EQ_specialisation__c</fullName>
    <label>EQ_specialisation</label>
    <length>100</length>
    <type>Text</type>
</CustomField>