force-app/main/default/objects/JK_EducationalQualification__c/fields/EqToEmp__c.field-meta.xml
<CustomField>
    <fullName>EqToEmp__c</fullName>
    <description>Educational Qualification to Employee relationship</description>
    <label>EQ_EqToEmp</label>
    <referenceTo>JK_Employee__c</referenceTo>
    <relationshipLabel>JK_EducationalQualifications</relationshipLabel>
    <relationshipName>JK_EducationalQualifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>